# variable-blur

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  browser.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  variable-blur.wasi-browser.js  variable-blur.wasi.cjs
.github/workflows/: CI.yml
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs
crates/debug-ui/: Cargo.toml
crates/debug-ui/src/: main.rs
src/: lib.rs  napirs.rs
src/core/: mod.rs  service.rs
src/core/domain/: approximation.rs  config.rs  curve.rs  direction.rs  mod.rs
src/core/engine/: filter.rs  image.rs  mod.rs  pyramid.rs  sampling.rs  schedule.rs
src/core/io/: codec.rs
