[package]
edition = "2021"
name = "variable_blur"
version = "0.1.0"

[workspace]
members = ["crates/debug-ui"]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = "3.8.3"
napi-derive = "3.5.2"
image = { version = "0.25.10", default-features = false, features = [
    "bmp",
    "jpeg",
    "png",
    "tga",
    "tiff",
    "webp",
] }
rayon = "1.11.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
